hookup test to generated definition